--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,16 @@
     Welcome to the chat app
   </p>
 
-  <script src="socket.io/socket.io.js"></script>
-  <script src="js/index.js"></script>
+  <ol id="messages"></ol>
+
+  <form id="message-form">
+    <input name="message" type="text" placeholder="Message" />
+    <button>Send</button>
+  </form>
+
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/js/libs/jquery.js"></script>
+  <script src="/js/index.js"></script>
 </body>
 
 </html>
